# flotilla

./: .coveragerc  .gitignore  AGENTS.md  ARCHITECTURE.md  BUSINESS_AGENT_QUICKSTART.md  CONFIG.md  CONTRIBUTING.md  README.md  SECURITY.md  TOOLS.md  conftest.py  coverage.xml  file_download_guide.md  migration_guide.md  package_compatibility_guide.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  testing_summary.md
.github/workflows/: ci.yml  release.yml
docs/: agent_design.md  agent_event_design.md  config_rules.md  flotilla_overview.md  security_review_findings.md  thread_and_events.md  tool_design.md
docs/templates/: application_spec_template.md  capability_spec_template.md  component_spec_template.md
example_app/: pyproject.toml
example_app/src/: main.py
example_app/src/agents/: weather_agent.py
example_app/src/app_agents/: weather_agent.py  weather_agent_builder.py
example_app/src/app_config/: agents.yml  feature_flags.yml  flotilla.yml  tools.yml
example_app/src/app_tools/: weather_tools.py  weather_tools_builder.py
example_app/src/config/: flotilla.yml
example_app/src/example_app/: cli.py
example_app/src/example_app/app_agents/: weather_agent.py  weather_agent_builder.py  weather_agent_provider.py
example_app/src/example_app/app_config/: flotilla.yml
example_app/src/example_app/app_tools/: city_search_tool.py  forecast_tool.py  weather_tools_builder.py
example_app/src/tools/: weather_tools.py
example_app/tests/integration/: test_weather_agent_integration.py  test_weather_tools_integration.py
example_app/tests/unit/: test_weather_tools.py
example_apps/: README.md
example_apps/loan_approval/app/: README.md  pyproject.toml
example_apps/loan_approval/app/src/loan_server/: approval_agent.py  flotilla.yml  loan_handler.py  loan_tool.py  postgres_saver_provider.py  risk_assessment_tool.py  start.py  thread_handler.py
example_apps/loan_approval/app/tests/: test_approval_agent_hitl_config.py
example_apps/loan_approval/client/: README.md  pyproject.toml
example_apps/loan_approval/client/src/loan_client/: __init__.py  cli.py  http_client.py
example_apps/weather/: pyproject.toml
example_apps/weather/src/weather/: cli.py  example_app.py
example_apps/weather/src/weather/app_agents/: weather_agent.py  weather_agent_provider.py
example_apps/weather/src/weather/app_config/: flotilla.yml
example_apps/weather/src/weather/app_tools/: city_search_tool.py  current_weather_tool.py  forecast_tool.py
schemas/: flotilla.schema.yml
src/: main.py  my_context.py
src/agents/: agent_factory.py  agent_registry.py  agent_selector.py  agent_selector_factory.py  base_business_agent.py  business_agent_response.py  orchestration_agent.py  response_factory.py
src/agents/business_logic/: BUSINESS_AGENT_README.md  weather_agent.py
src/agents/selectors/: keyword_agent_selector.py  llm_agent_selector.py  vector_agent_selector.py
src/clients/: block_mcp_client.py
src/config/: application_settings.py  config_factory.py  config_loader.py  config_models.py  flotilla_setttings.py  settings.py
src/flotilla/: config_models.py  flotilla_application.py  flotilla_configuration_error.py  orchestration_engine.py
src/flotilla/agents/: agent_registry.py  agent_selector.py  base_business_agent.py  business_agent_response.py  response_factory.py
src/flotilla/builders/: builder_group.py  default_builders.py
src/flotilla/config/: config_loader.py  config_utils.py  configuration_source.py  secret_resolver.py  secrets.py  settings.py  sources.py
src/flotilla/container/: agent_buidler.py  agent_factory.py  base_contributors.py  builder_group.py  component_builder.py  component_compiler.py  component_factory.py  core_singleton_contributor.py  flotilla_container.py
src/flotilla/core/: agent_input.py  execution_checkpoint.py  execution_config.py  flotilla_runtime.py
src/flotilla/llm/: llm_builders.py  llm_factory.py
src/flotilla/selectors/: keyword_agent_selector.py  llm_agent_selector.py  vector_agent_selector.py
src/flotilla/tools/: base_tool_provider.py  decorator_tool_provider.py  mcp_tool_provider.py  tool_config.py  tool_registry.py
src/flotilla_core/: pyproject.toml
src/flotilla_core/docs/: agent_event.md  architecture_config.md  config_overview.md  content_part.md  execution_timeout_policy.md  flotilla_agent.md  flotilla_runtime.md  flotilla_tool.md  orchestration_strategy.md  resume_authorization_policy.md  runtime_io.md  runtimes.md  telemetry_policy.md  test_scenarios.md  thread_entry_store.md  thread_model.md
src/flotilla_core/tests/: conftest.py  runtime_fakes.py
src/llm/: llm_factory.py  llm_provider.py
src/tools/: base_tool.py  base_tool_provider.py  decorator_tool_provider.py  mcp_tool_provider.py  tool_factory.py  tool_registry.py
src/tools/weather/: weather_tools.py
src/utils/: logger.py
src/workflows/: pricing_optimization.json
tests/: README.md  conftest.py  test_agent_registry.py  test_base_business_agent.py  test_config_factory.py  test_config_loader.py  test_config_models.py  test_llm_provider.py  test_orchestration_agent.py  test_tool_registry.py
tests/agents/: test_agent.py
tests/integration/: conftest.py  test_weather_agent_integration.py
tests/tools/: test_tool.py
tests/unit/: conftest.py  example.yml  test_agent_factory.py  test_agent_registry.py  test_base_business_agent.py  test_business_agent_response.py  test_config_factory.py  test_config_loader.py  test_config_models.py  test_llm_factory.py  test_orchestration_agent.py  test_tool_registry.py
tests/unit/agents/: test_agent.py  (+5 more)
(+136 files in other folders)
