[project]
name = "flotilla"
version = "0.1.0"
description = "Agent orchestration framework"
authors = [
    {name = "geoff",email = "geoffschneider@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (==1.0.1)",
    "langchain-openai (==1.0.1)",
    "langchain-community (==0.4.0)",
    "dependency-injector (==4.41.0)",
    "pydantic (==2.12.2)",
    "pydantic-settings (==2.11.0)",
    "numpy (==2.1.0)",
    "click (==8.1.7)",
    "rich (==13.7.1)",
    "structlog (==24.1.0)",
    "python-dotenv (==1.0.1)",
    "pyyaml (==6.0.1)",
    "requests (==2.32.5)",
    "httpx (==0.27.1)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "mcp (>=1.25.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==8.3.4)",
    "pytest-asyncio (==0.24.0)",
    "pytest-cov (==6.0.0)",
    "pytest-mock (==3.14.0)",
    "pytest-env (==1.1.5)",
    "responses (==0.25.3)",
    "faker (==33.1.0)"
]
