[tool.poetry]
name = "flotilla-example-app-weather"
version = "0.1.0"
description = "Example weather app for Flotilla"
authors = ["geoff <geoffschneider@gmail.com>"]
packages = [{ include = "example_app", from = "src" }]

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flotilla-core = { path = "../../packages/flotilla-core", develop = true }
flotilla-langchain = { path = "../../packages/flotilla-langchain", develop = true }

# App-specific dependencies
rich = "13.7.1"
click = "8.1.7"
httpx = "0.27.1"
requests = "2.32.5"
numpy = "2.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
